overflow-x corrected

--- a/horoscope.css
+++ b/horoscope.css
@@ -2,7 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 video {
@@ -22,7 +25,7 @@ video {
 
 .row {
     padding: 2em;
-    margin-bottom: 3em !important;
+    margin-bottom: 2em !important;
 }
 
 label {
@@ -32,7 +35,7 @@ label {
 }
 
 .result {
-    background-color: rgb(248, 232, 213);
+    background-color: rgba(255, 233, 205, 0.904);
 }
 
 .btn {
